updates on media query

--- a/investwithalpha.html
+++ b/investwithalpha.html
@@ -39,8 +39,8 @@
             <div>
                 <div class="flex justify-center gap-[20px] mb-[20px] px-[4rem]">
                     <div class=" w-[25%]">
-                        <h1 class="text-white px-[10px] bg-[#db6a41] w-[10%] text-center text-[14px]" style="margin-bottom: -40px; margin-left: 15px; position: relative;">Upcoming</h1>
-                        <img src="/images/galactica.webp" alt="" style="height: 30vh; width: 100%; ">
+                        <h1 class="text-white px-[5px] bg-[#db6a41] w-[30%] text-center text-[14px]" style="margin-bottom: -40px; margin-left: 15px; position: relative;">Upcoming</h1>
+                        <img src="/images/galactica.webp" class="object-cover" alt="" style="height: 25vh; width: 100%;">
                         <div class="bg-[#191E29] flex flex-col py-[10px]">
                             <div class="flex gap-[10px] text-white px-[15px] py-[12px]">
                                 <p class="bg-[#282a2c] text-[14px] px-[5px]">Blockchain L1</p>
@@ -48,25 +48,25 @@
                                 <p class="bg-[#282a2c] text-[14px]">DeSoc</p>
                             </div>
                             <h2 class="text-white text-[20px] px-[15px] font-bold">Galactica</h2>
-                            <button class="text-[#01C38D] mt-[50px] w-[80%] py-[5px] rounded-full text-center mx-auto items-center" style="border: 1px solid #01C38D;">I'm interested</button>
+                            <button class="text-[#35d49a] mt-[50px] w-[80%] py-[5px] rounded-full text-center mx-auto items-center" style="border: 1px solid #35d49a;">I'm interested</button>
                         </div>
                     </div>
 
                     <div class=" w-[25%]">
                         <h1 class="text-white bg-[#7182FF] w-[18%] text-center text-[14px]" style="margin-bottom: -45px; margin-left: 15px; position: relative;">Closed</h1>
-                        <img src="/images/darkmachine.webp" alt="" style="height: 30vh; width: 100%;">
-                        <div class="bg-[#191E29] flex flex-col py-[10px]">
+                        <img src="/images/darkmachine.webp" class="object-cover" alt="" style="height: 25vh; width: 100%;">
+                        <div class="bg-[#191E29] flex flex-col py-[10px] object-contain">
                             <div class="flex gap-[10px] text-white px-[15px] py-[12px]">
                                 <p class="bg-[#282a2c] text-[14px] px-[5px]">GameFi</p>
                             </div>
                             <h2 class="text-white text-[20px] px-[15px] font-bold">Dark Machine</h2>
-                            <button class="text-[#01C38D] mt-[50px] w-[80%] py-[5px] rounded-full text-center mx-auto items-center" style="border: 1px solid #01C38D;">See project</button>
+                            <button class="text-[#35d49a] mt-[50px] w-[80%] py-[5px] rounded-full text-center mx-auto items-center" style="border: 1px solid #35d49a;">See project</button>
                         </div>
                     </div>
 
                     <div class=" w-[25%]">
                         <h1 class="text-white bg-[#7182FF] w-[18%] text-center text-[14px]" style="margin-bottom: -45px; margin-left: 15px; position: relative;">Closed</h1>
-                        <img src="/images/aethir.webp" alt="" style="height: 30vh; width: 100%;">
+                        <img src="/images/aethir.webp" class="object-cover" alt="" style="height: 25vh; width: 100%;">
                         <div class="bg-[#191E29] flex flex-col py-[10px]">
                             <div class="flex gap-[10px] text-white px-[15px] py-[12px]">
                                 <p class="bg-[#282a2c] text-[14px] px-[5px]">DePin</p>
@@ -74,13 +74,13 @@
                                 <p class="bg-[#282a2c] text-[14px] px-[5px]">AI</p>
                             </div>
                             <h2 class="text-white text-[20px] px-[15px] font-bold">Aethir</h2>
-                            <button class="text-[#01C38D] mt-[50px] w-[80%] py-[5px] rounded-full text-center mx-auto items-center" style="border: 1px solid #01C38D;">See project</button>
+                            <button class="text-[#35d49a] mt-[50px] w-[80%] py-[5px] rounded-full text-center mx-auto items-center" style="border: 1px solid #35d49a;">See project</button>
                         </div>
                     </div>
                 </div>
                 <div class="py-[2rem] w-[25%] mx-auto">
-                    <h1 class="text-white bg-[#7182FF] w-[5%] text-center text-[15px]" style="margin-bottom: -45px; margin-left: 15px; position: relative;">Closed</h1>
-                    <img src="/images/agoradex.webp" alt="" style="height: 28vh; width: 100%;">
+                    <h1 class="text-white bg-[#7182FF] w-[18%] text-center text-[15px]" style="margin-bottom: -45px; margin-left: 15px; position: relative;">Closed</h1>
+                    <img src="/images/agoradex.webp" class="object-cover" alt="" style="height: 28vh; width: 100%;">
                     <div class="bg-[#191E29] flex flex-col py-[10px]">
                         <div class="flex gap-[10px] text-white px-[15px] py-[12px]">
                             <p class="bg-[#282a2c] text-[14px] px-[5px]">GameFi</p>
@@ -88,48 +88,121 @@
                             <p class="bg-[#282a2c] text-[14px] px-[5px]">AI</p>
                         </div>
                         <h2 class="text-white text-[20px] px-[15px] font-bold">Aethir</h2>
-                        <button class="text-[#01C38D] mt-[50px] w-[80%] py-[5px] rounded-full text-center mx-auto items-center" style="border: 1px solid #01C38D;">See project</button>
+                        <button class="text-[#35d49a] mt-[50px] w-[80%] py-[5px] rounded-full text-center mx-auto items-center" style="border: 1px solid #35d49a;">See project</button>
                     </div>
                 </div>
             </div>
         </div>
 
         <div class="text-white py-[10rem]">
-            <h1 class="text-[40px] py-[25px] text-center">All projects</h1>
-            <div class="flex gap-[40px] justify-center">
+            <h1 class="text-[40px] py-[30px] text-center">All projects</h1>
+            <div class="flex gap-[60px] justify-center">
                 <a href="">Register your interest</a>
-                <a href="" class="text-[#282a2c]">Upcoming</a>
-                <a href="" class="text-[#282a2c]">In progress</a>
-                <a href="" class="text-[#282a2c]">Register your interest</a>
+                <a href="" class="text-[#]">Upcoming</a>
+                <a href="" class="text-[#]">In progress</a>
+                <a href="" class="text-[#]">Register your interest</a>
             </div>
 
-            <div>
+            <!-- <div class="grid grid-cols-5 px-[2rem] py-[2rem] items-center">
                 <div>
-                    <h3>Project name</h3>
-                    <h1>GenesisLRT</h1>
+                    <h3 class="py-[20px]">Project name</h3>
+                    <h1 class="py-[20px]">GenesisLRT</h1>
                     <h1>Kelp</h1>
                 </div>
                 <div>
-                    <h3>Interested users</h3>
-                    <p>58</p>
+                    <h3 class="py-[20px]">Interested users</h3>
+                    <p class="py-[20px]">58</p>
                     <p>93</p>
                 </div>
                 <div>
-                    <h3>Past backers</h3>
-                    <h1>Tagus Labs, Ankr, Everstake</h1>
+                    <h3 class="py-[20px]">Past backers</h3>
+                    <h1 class="py-[20px]">Tagus Labs, Ankr, Everstake</h1>
                     <h1>Stader Foundation, Cluster </h1>
                 </div>
                 <div>
-                    <h3>Previous round raised</h3>
-                    <h1>$500,000.00</h1>
+                    <h3 class="py-[20px]">Previous round raised</h3>
+                    <h1 class="py-[20px]">$500,000.00</h1>
                     <h1>$1,400,000</h1>
                 </div>
-                <div>
+                <div class="grid grid-cols">
+                    <h3 class="py-[20px] opacity-0">Previous round raised</h3>
+                    <a href="" class="py-[20px]">i'm interested</a>  
                     <a href="">i'm interested</a>  
-                    <a href="">i'm interested</a>  
+                </div>
+            </div> -->
+
+            <div class="py-[3rem] px-[6rem]">
+                <div class="grid grid-cols-5 px-[2rem] py-[2rem] items-center" style="border-bottom: 1px solid gray;">
+                    <h3>Project name</h3>
+                    <h3>Interested users</h3>
+                    <h3>Past backers</h3>
+                    <h3>Previous round raised</h3>
+                    <h3 class="opacity-0">Previous round raised</h3>
+                </div>
+                <div class="grid grid-cols-5 px-[2rem] py-[2rem] items-center" style="border-bottom: 1px solid gray">
+                    <div class="flex gap-[5px]">
+                        <img src="/images/gene-img.webp" class="rounded-full" width="15%">
+                        <h1>GenesisLRT</h1>
+                        <p class="bg-gray-500 px-[5px] py-[1px]">LRT</p>
+                    </div>
+                    <p>58</p>
+                    <h1>Tagus Labs, Ankr, Everstake</h1>
+                    <h1 class="">$500,000.00</h1>
+                    <a href="" class="text-[#35d49a]">i'm interested</a>
+                </div>
+                <div class="grid grid-cols-5 px-[2rem] py-[2rem] items-center">
+                    <div class="flex gap-[5px]">
+                        <img src="/images/kelp-img.webp" class="rounded-full" alt="" width="15%">
+                        <h1>Kelp</h1>
+                        <p class="bg-gray-500 px-[5px] py-[1px]">LRT</p>
+                    </div>
+                    <p>93</p>
+                    <h1>Stader Foundation, Cluster </h1>
+                    <h1>$1,400,000</h1>
+                    <a href="" class="text-[#35d49a]">i'm interested</a>
                 </div>
             </div>
         </div>
+
+        <div class="flex gap-[120px] items-center px-[1rem]" style="background-image: linear-gradient(130deg, black, #323B4D); margin: 0 45px;">
+            <img src="/images/swissbot-img.webp" alt="" width="25%">
+            <div class="flex flex-col justify-center items-start text-start">
+                <h1 class="text-[35px] text-white font-semibold">Don’t miss your next investment opportunity</h1>
+                <p class="text-[20px] text-white py-[10px]">Join SwissBorg now to access the best opportunities with a tap of your finger.</p>
+                <button class="mt-[4rem] bg-[#35d49a] text-[15px] text-white py-[5px] px-[20px] rounded-full">Get Started</button>
+            </div>
+        </div>
+
+        <footer class="py-[1rem] mt-[4rem]">
+            <div class="flex justify-between py-[2rem] px-[2rem] text-[18px] gap-[20px] bg-[#00000129]"> 
+                <div class="w-[90%]">
+                    <h1 class="font-bold leading-6 text-[#7c818b] pb-[25px]">Holding and headquarters in Switzerland</h1>
+                    <p class="text-[#7c818b] font-bold">SBorg SA</p> 
+                    <p class="text-[#7c818b]">Rue du Grand-Chêne 8, 1003 Lausanne Switzerland</p>
+                    <p class="text-[#7c818b] py-[3rem]">By using this website you agree to our Terms of Use. Nothing on this website should be construed as a recommendation for any action. SwissBorg Solutions OÜ is the owner of the license: FVT000326 (link) and E2022-034 (link). For more details, please see the Terms of Use of the SwissBorg app.</p>
+                </div>
+                <div class="w-[85%]">
+                    <h1 class="font-bold leading-6 text-[#7c818b] pb-[12px]">Representative office in Switzerland of SwissBorg Solutions OÜ</h1>
+                    <p class="text-[#7c818b] font-bold">SwissBorg Invest SA</p> 
+                    <p class="text-[#7c818b]">Rue du Grand-Cheêne 8, 1003 Lausanne Switzerland</p>
+                </div>
+                <div class="w-[90%]">
+                    <h1 class="font-bold leading-6 text-[#7c818b] pb-[12px]">Operating the SwissBorg App under the license FVT000326 in Estonia</h1>
+                    <p class="text-[#7c818b] font-bold">SwissBorg Solutions OÜ</p> 
+                    <p class="text-[#7c818b]">Roosikrantsi tn 2-1091,Kesklinna linnaosa, Tallinn, Harju maakond 10119, Estonia</p> 
+                </div>
+            </div>
+    
+            <div class="flex justify-between pt-[2rem] px-[2rem] text-[18px] bg-[#00000129]">
+                <div class="py-[2rem] flex gap-[20px] text-[#09a77d]">
+                    <a href="">Terms of Use</a>
+                    <a href="">Privacy Policy</a>
+                    <a href="">Cookies Policy</a>
+                    <a href="">Brand kit</a>
+                </div>
+                <p class="px-[6rem] text-[#7c818b]">&copy SBorg SA. All Rights Reserved.</p>
+            </div>
+        </footer>
     </section>
 </body>
 </html>
