--- a/automate.html
+++ b/automate.html
@@ -37,7 +37,7 @@
 
         <div>
             <h1 class="text-center text-[35px] font-semibold">Learn more about Auto-Invest</h1>
-            <div class="flex justify-center mx-auto py-[50px] text-white">
+            <div class="flex mx-auto py-[50px] text-white">
                 <div class="autoinvest w-[35%] rounded-2xl mx-auto p-[20px]">
                     <div class="text-left flex flex-col gap-[150px]">
                         <i class="bi bi-play-circle-fill text-[16px]"></i>
@@ -53,8 +53,30 @@
             </div>
         </div>
 
-        <div>
+        <div class="flex gap-[80px] justify-between items-center py-[6rem] px-[3rem]">
+            <img src="/images/dca-img.avif" alt="" width="38%">
+            <div class="pl-[7rem]">
+                <h1 class="text-[40px] font-semibold">What is Auto-Invest?</h1>
+                <p class="text-[20px] py-[2rem]">Auto-Invest uses Dollar Cost Averaging (DCA), a popular strategy among savvy investors, to reduce volatility by investing a fixed amount at regular intervals.</p>
+            </div>
+        </div>
 
+        <div class="flex flex-col px-[10rem] py-[3rem] items-center">
+            <p class="font-bold text-[50px] py-[2rem] text-center leading-tight">Why is Auto-Invest good for you?</p>
+            <div class=" flex gap-[25px] items-center text-[18px]">
+                <a href="" class="px-[12px] py-[8px] bg-[#E5F9F3] text-[#01C38D] hover:font-bold rounded-lg">Long-term wealth</a>
+                <a href="">Invest better</a>
+                <a href="">It's stress free!</a>
+                <a href="">You have the power</a>
+            </div>
+
+            <div class="flex gap-[45px] items-center px-[4rem] py-[4rem]">
+                <img src="/images/buy-sell-1.avif" alt="" width="50%">
+                <div>
+                    <h1 class="font-bold text-[30px] py-[30px]">Buy, sell & exchange always at the best available price</h1>
+                    <p class="text-[16px]">Market volatility often leads to price differences across exchanges. Our Smart Engine takes advantage of this by finding the best execution route every time, meaning you get the best price from multiple exchanges.</p>
+                </div>
+            </div>
         </div>
     </section>
 </body>
