--- a/buycryptos.html
+++ b/buycryptos.html
@@ -162,15 +162,15 @@
                     <p class="text-md py-[12px] text-left">Follow and subscribe to our channels</p>
                 </div>
                 <div class="flex flex-row gap-[20px] text-center items-center">
-                    <i class="bi bi-twitter-x bg-white px-[8px] py-[5px] rounded-md"></i>
-                    <i class="bi bi-discord bg-white px-[8px] py-[5px] rounded-md"></i>
-                    <i class="bi bi-youtube bg-white px-[8px] py-[5px] rounded-md"></i>
-                    <i class="bi bi-facebook bg-white px-[8px] py-[5px] rounded-md"></i>
-                    <i class="bi bi-instagram bg-white px-[8px] py-[5px] rounded-md"></i>
-                    <i class="bi bi-linkedin bg-white px-[8px] py-[5px] rounded-md"></i>
-                    <i class="bi bi-telegram bg-white px-[8px] py-[5px] rounded-md"></i>
-                    <i class="bi bi-tiktok bg-white px-[8px] py-[5px] rounded-md"></i>
-                    <i class="bi bi-tiktok bg-white px-[8px] py-[5px] rounded-md"></i>
+                    <i class="bi bi-twitter-x bg-white text-black px-[8px] py-[5px] rounded-md"></i>
+                    <i class="bi bi-discord bg-white text-black px-[8px] py-[5px] rounded-md"></i>
+                    <i class="bi bi-youtube bg-white text-black px-[8px] py-[5px] rounded-md"></i>
+                    <i class="bi bi-facebook bg-white text-black px-[8px] py-[5px] rounded-md"></i>
+                    <i class="bi bi-instagram bg-white text-black px-[8px] py-[5px] rounded-md"></i>
+                    <i class="bi bi-linkedin bg-white text-black px-[8px] py-[5px] rounded-md"></i>
+                    <i class="bi bi-telegram bg-white text-black px-[8px] py-[5px] rounded-md"></i>
+                    <i class="bi bi-tiktok bg-white text-black px-[8px] py-[5px] rounded-md"></i>
+                    <i class="bi bi-tiktok bg-white text-black px-[8px] py-[5px] rounded-md"></i>
                 </div>
             </div>
         </div>
