--- a/css/portfolio.html
+++ b/css/portfolio.html
@@ -50,19 +50,19 @@
             <h1 class="text-center py-[40px] text-[40px] font-bold">Explore more features in the SwissBorg app</h1>
             <div class="flex gap-[25px] items-center text-center flex-row justify-between">
                 <div class="px-[65px] py-[18px] w-[55%] rounded-md" style="box-shadow: 0 0 13px #e6e4e4;">
-                    <a href=""><img src="/images/swissapp-img.svg" alt="" width="55%"></a>
+                    <a href=""><img src="/images/swissapp-img.svg" alt="" width="55%" class="mx-auto"></a>
                     <p class="py-[10px] text-[20px]">BORG Token</p>
                 </div>
                 <div class="px-[65px] py-[18px] w-[55%] rounded-md" style="box-shadow: 0 0 13px #e6e4e4;">
-                    <a href=""><img src="/images/swissapp-2.svg" alt="" width="55%"></a>
+                    <a href=""><img src="/images/swissapp-2.svg" alt="" width="55%" class="mx-auto"></a>
                     <p class="py-[10px] text-[20px]">SwissBorg Earn</p>
                 </div>
                 <div class="px-[50px] py-[18px] w-[55%] rounded-md" style="box-shadow: 0 0 12px #e6e4e4;">
-                    <a href=""><img src="/images/swissapp-3.avif" alt="" width="55%"></a>
+                    <a href=""><img src="/images/swissapp-3.avif" alt="" width="55%" class="mx-auto"></a>
                     <p class="py-[10px] text-[20px]">Supported Assets</p>
                 </div>
                 <div class="px-[50px] py-[18px] w-[55%] rounded-md" style="box-shadow: 0 0 12px #e6e4e4;">
-                    <a href=""><img src="/images/swissapp-4.avif" alt="" width="50%"></a>
+                    <a href=""><img src="/images/swissapp-4.avif" alt="" width="50%" class="mx-auto"></a>
                     <p class="py-[10px] text-[20px]">Rewards Program</p>
                 </div>
             </div>
