--- a/diversify.html
+++ b/diversify.html
@@ -233,7 +233,7 @@
 
 
         <!-- Frequently asked quedtions -->
-    <div class="flex flex-col md:flex-row justify-center w-full md:w-[95%] lg:w-[60%] mx-auto gap-[60px] md:gap-[100px]">
+    <div class="flex flex-col md:flex-row justify-center w-full md:w-[95%] lg:w-[70%] mx-auto gap-[60px] md:gap-[100px]">
         <h1 class="text-3xl lg:text-[40px] md:w-[20%] text-left font-bold pl-[20px] md:pl-[0px]">Frequently asked questions</h1>
 
 
@@ -241,7 +241,7 @@
 
             <div class="flex flex-col w-full my-[10px] pb-[25px] border-b border-black faq">
                 <div class="flex justify-between md:gap-[200px] cursor-pointer que">
-                    <h1 class="text-lg font-bold">In short, what is thematic investing?</h1>
+                    <h1 class="text-sm md:text-lg lg:text-xl font-bold">In short, what is thematic investing?</h1>
                     <i class="bi bi-chevron-down text-[#01C38D]"></i>
                 </div>
 
@@ -252,7 +252,7 @@
 
             <div class="flex flex-col w-full my-[10px] pb-[25px] border-b border-black faq">
                 <div class="flex justify-between gap-[200px] cursor-pointer que">
-                    <h1 class="text-lg font-bold">What is rebalancing?</h1>
+                    <h1 class="text-sm md:text-lg lg:text-xl font-bold">What is rebalancing?</h1>
                     <i class="bi bi-chevron-down text-[#01C38D]"></i>
                 </div>
 
@@ -263,7 +263,7 @@
 
             <div class="flex flex-col w-full my-[10px] pb-[25px] border-b border-black faq">
                 <div class="flex justify-between gap-[200px] cursor-pointer que">
-                    <h1 class="text-lg font-bold">What is reallocation?</h1>
+                    <h1 class="text-sm md:text-lg lg:text-xl font-bold">What is reallocation?</h1>
                     <i class="bi bi-chevron-down text-[#01C38D]"></i>
                 </div>
 
@@ -274,7 +274,7 @@
 
             <div class="flex flex-col w-full my-[10px] pb-[25px] border-b border-black faq">
                 <div class="flex justify-between gap-[200px] cursor-pointer que">
-                    <h1 class="text-lg font-bold">Do I really own the tokens/coins?</h1>
+                    <h1 class="text-sm md:text-lg lg:text-xl font-bold">Do I really own the tokens/coins?</h1>
                     <i class="bi bi-chevron-down text-[#01C38D]"></i>
                 </div>
 
@@ -285,7 +285,7 @@
 
             <div class="flex flex-col w-full my-[10px] pb-[25px] border-b border-black faq">
                 <div class="flex justify-between gap-[200px] cursor-pointer que">
-                    <h1 class="text-lg font-bold">What is the minimum investment amount?</h1>
+                    <h1 class="text-sm md:text-lg lg:text-xl font-bold">What is the minimum investment amount?</h1>
                     <i class="bi bi-chevron-down text-[#01C38D]"></i>
                 </div>
 
@@ -296,19 +296,19 @@
 
             <div class="flex flex-col w-full my-[10px] pb-[25px] border-b border-black faq">
                 <div class="flex justify-between gap-[200px] cursor-pointer que">
-                    <h1 class="text-lg font-bold">What is the minimum investment period?</h1>
+                    <h1 class="text-sm md:text-lg lg:text-xl font-bold">What is the minimum investment period?</h1>
                     <i class="bi bi-chevron-down text-[#01C38D]"></i>
                 </div>
 
                 <div class="my-[20px] hidden">
-                    <p>There is no minimum investment period. You are free to sell your Thematic investment at any time. In the future, you will be able to earn rewards based on your holding duration.</p>
+                    <p class=" font-medium text-sm md:text-md lg:text-lg text-[a1a1a1]">There is no minimum investment period. You are free to sell your Thematic investment at any time. In the future, you will be able to earn rewards based on your holding duration.</p>
                 </div>
             </div>
         </div>
     </div>
 
     <!-- <div class="lg:flex lg:w-[76%] lg:mx-auto sm:flex-col-reverse sm:mx-auto items-center gap-8 px-6 my-8 md:mx-auto md:flex-row md:gap-18 md:px-20 md:my-16 lg:px-32"> -->
-    <div class="flex flex-col md:flex-row items-center my-[100px] gap-[100px] md:w-[90%] lg:w-[60%] mx-auto">
+    <div class="flex flex-col md:flex-row items-center my-[100px] gap-[100px] md:w-[90%] lg:w-[70%] mx-auto">
 
         <div class="w-[85%] mx-auto md:items-center ">
             <h1 class="font-bold text-2xl lg:w-[70%] lg:leading-[50px] lg:text-left md:font-bold md:leading-[46px] md:text-3xl md:text-left lg:text-4xl">Diversify like the pros in just 3 steps. Start now!</h1>
@@ -344,7 +344,7 @@
         <div class="flex flex-col justify-between md:flex-row gap-[20px] md:gap-[200px] px-[2rem] py-[2rem] w-full">
             <div class="flex flex-col md:flex-row md:items-center gap-[20px] md:gap-[100px] justify-between">
                 <div class="flex flex-col md:w-[50%]  gap-[20px] leading-8">
-                    <div class="flex items-center w-full  md:border-none  justify-between gap-[300px] border-b border-black">
+                    <div class="flex items-center w-full  md:border-none  justify-between gap-[100px] border-b border-black">
                         <h1 class="font-bold text-[18px] text-gray-400">SwissBorg app</h1>
                         <i class="bi bi-chevron-down md:hidden"></i>
                     </div>
@@ -397,34 +397,36 @@
         </div>
 
         <div class="flex flex-col lg:flex-row  md:w-full  gap-[30px]">
-            <div class="text-white p-[20px] md:py-[3rem] w-[95%] md:w-[95%] h-[250px] md:h-[270px] mx-auto text-center rounded-md" style="background-image: linear-gradient(135deg, #09a77d, #12E3BC);">
+            <div class="text-white p-[20px] md:py-[3rem] w-[95%] md:w-[95%] h-[270px] md:h-[270px] mx-auto text-center rounded-md" style="background-image: linear-gradient(135deg, #09a77d, #12E3BC);">
                 <h1 class="font-bold w-full text-left text-lg">Subscribe to our newsletter</h1>
-
                 <p class="text-md py-[12px] text-left">Receive official updates when you join our mailing list</p>
                 <div class="flex flex-col gap-[20px]">
-                    <input type="text" class="px-[16px] py-3 lg:w-[100%] rounded-md bg-[#53DEBD] text-white w-full" placeholder="Name(required)">
-                    <div class="flex">
-                        <input type="text" class="px-[16px] py-2 w-[100%] rounded-md bg-[#53DEBD]" placeholder="Email(required)">
-                        <i class="bi bi-chevron-right font-bold bg-white text-[#12E3BC] py-[8px] px-[15px] text-[25px] ml-[-16px] rounded-tr-lg rounded-br-lg"></i>
+                    <input type="text" class="px-[16px] py-3 lg:w-[100%] rounded-md bg-[#53DEBD] text-white w-full" placeholder="Name (required)">
+                    <div class="flex items-center rounded-md bg-[#53DEBD]">
+                        <input type="text" class="px-[16px] py-3 flex-grow bg-transparent" placeholder="Email (required)">
+                        <button class="bg-white text-[#12E3BC] py-[8px] px-[15px] rounded-r-md">
+                            <i class="bi bi-chevron-right font-bold text-[25px]"></i>
+                        </button>
                     </div>
                 </div>
             </div>
+            
 
-            <div class="text-white p-[20px] md:py-[3rem] w-[95%] h-[270px] mx-auto text-center rounded-md" style="background-image: linear-gradient(135deg, #2e15ce, #8B7DFF);">
+            <div class="text-white p-[20px] md:py-[3rem] w-[95%] h-[270px] md:h-[270px] mx-auto text-center rounded-md" style="background-image: linear-gradient(135deg, #2e15ce, #8B7DFF);">
                 <div>
                     <h1 class="font-bold w-full text-left text-lg">Be part of our growing global community</h1>
                     <p class="text-md py-[12px] text-left">Follow and subscribe to our channels</p>
                 </div>
-                <div class="flex flex-row gap-[20px] text-center items-center">
-                    <i class="bi bi-twitter-x bg-white px-[8px] py-[5px] rounded-md"></i>
-                    <i class="bi bi-discord bg-white px-[8px] py-[5px] rounded-md"></i>
-                    <i class="bi bi-youtube bg-white px-[8px] py-[5px] rounded-md"></i>
-                    <i class="bi bi-facebook bg-white px-[8px] py-[5px] rounded-md"></i>
-                    <i class="bi bi-instagram bg-white px-[8px] py-[5px] rounded-md"></i>
-                    <i class="bi bi-linkedin bg-white px-[8px] py-[5px] rounded-md"></i>
-                    <i class="bi bi-telegram bg-white px-[8px] py-[5px] rounded-md"></i>
-                    <i class="bi bi-tiktok bg-white px-[8px] py-[5px] rounded-md"></i>
-                    <i class="bi bi-tiktok bg-white px-[8px] py-[5px] rounded-md"></i>
+                <div class="flex flex-wrap gap-[10px] justify-center items-center w-full">
+                    <i class="bi bi-twitter-x p-[8px] rounded-md text-[#1DA1F2]"></i>
+                    <i class="bi bi-discord p-[8px] rounded-md text-[#7289da]"></i>
+                    <i class="bi bi-youtube  p-[8px] rounded-md text-[#FF0000]"></i>
+                    <i class="bi bi-facebook p-[8px] rounded-md text-[#1877F2]"></i>
+                    <i class="bi bi-instagram p-[8px] rounded-md text-[#C13584]"></i>
+                    <i class="bi bi-linkedin p-[8px] rounded-md text-[#2867B2]"></i>
+                    <i class="bi bi-telegram p-[8px] rounded-md text-[#26A5E4]"></i>
+                    <i class="bi bi-tiktok p-[8px] rounded-md text-[#69C9D0]"></i>
+                    <i class="bi bi-tiktok p-[8px] rounded-md text-[#69C9D0]"></i>
                 </div>
             </div>
         </div>
